Added in answers to solution

--- a/index.ipynb
+++ b/index.ipynb
@@ -102,7 +102,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "number_of_weeks = 5# 5"
+    "number_of_weeks = 5\n",
+    "number_of_weeks # 5"
    ]
   },
   {
@@ -160,7 +161,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.5"
+   "version": "3.6.6"
   }
  },
  "nbformat": 4,
